--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,13 @@ youtube-transcript-api
 pathlib
 
 
+
 google-api-python-client
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
-google-generativeai
-python-dotenv
+
 youtube-transcript-api
-docx
-beautifulsoup4
+python-docx
 requests
+beautifulsoup4
